# FreshmanProjects

./: NOTES  README.md
CompCalc/: CMakeLists.txt  complex.cc  complex.h  main.cc  string-parse.cc  string-parse.h
FinalGame/: AnimatedGameObject.cpp  AnimatedGameObject.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  HighScore.cpp  HighScore.h  main.cpp
FinalGame/Images/: TextBackground
HelloWorld/: a.out  main.cpp
Notes/: CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
Review/: CMakeLists.txt  main.cpp
SFML1/: AnimatedGameObject.cpp  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  RegularGameObject.cpp  RegularGameObject.h
SFML1/Homework5/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  main.cpp
Threads/: CMakeLists.txt  main.cpp
Vector3/: CMakeLists.txt  Vector.cc  Vector.h  Vector.h.gch  a.out  main.cpp
vectors/: CMakeLists.txt  Vector.cpp  main.cpp
